# trying_to_get_dotnet_closed_source_libraries_to_work_with_rust

./: README.md
cpp_to_rust/helloworld_simple/: Cargo.toml  README.md  build.rs
cpp_to_rust/helloworld_simple/src/: hello.c  main.rs
dotnet_to_cpp/rawrr_solution/: Makefile  README.md  rawrrRcpp  rawrrRcpp.cpp  rawrrRcpp.h
dotnet_to_rust/dnne_to_cpp_to_rust/: Cargo.toml  README.md  build.rs
dotnet_to_rust/dnne_to_cpp_to_rust/ext_lib/: example.runtimeOptions.json
dotnet_to_rust/dnne_to_cpp_to_rust/src/: main.rs
dotnet_to_rust/rawrr_to_rust/: Cargo.toml  README.md  build.rs
dotnet_to_rust/rawrr_to_rust/src/: main.rs  rawrrRcpp.cpp  rawrrRcpp.cs
dotnet_to_rust/rust_mono_and_dotnet_wrapper/: Cargo.toml  README.md
dotnet_to_rust/rust_mono_and_dotnet_wrapper/dlls/: dnne-gen.runtimeconfig.json
dotnet_to_rust/rust_mono_and_dotnet_wrapper/src/: main.rs
